refactor fragment xmls + new board text input placeholder

--- a/HomeWork_2/app/src/main/res/values/strings.xml
+++ b/HomeWork_2/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HomeWork_2</string>
     <string name="add_board_title">Создать доску</string>
+    <string name="add_board_title_hint">Название доски</string>
 </resources>
