--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="add_board_title">Создать доску</string>
     <string name="add_board_title_hint">Название доски</string>
     <string name="participants">Участники</string>
+    <string name="select_category">Выберите категорию</string>
 </resources>
