--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="select_category">Выберите категорию</string>
     <string name="add_task_title">Создать задачу</string>
     <string name="add_task_title_hint">Название задачи</string>
+    <string name="trello_logout">Выйти из Trello аккаунта</string>
 </resources>
