--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="add_task_title">Создать задачу</string>
     <string name="add_task_title_hint">Название задачи</string>
     <string name="trello_logout">Выйти из Trello аккаунта</string>
+    <string name="attachments">Вложения</string>
 </resources>
