--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="add_board_title_hint">Название доски</string>
     <string name="participants">Участники</string>
     <string name="select_category">Выберите категорию</string>
-    <string name="add_task_title">Создать задачу</string>
-    <string name="add_task_title_hint">Название задачи</string>
+    <string name="add_task_text">Создать задачу</string>
+    <string name="add_task_text_hint">Текст задачи</string>
     <string name="trello_logout">Выйти из Trello аккаунта</string>
     <string name="attachments">Вложения</string>
     <string name="no_description">Нет описания</string>
