Search task by entered text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="attachments">Вложения</string>
     <string name="no_description">Нет описания</string>
     <string name="changes_history">История изменений</string>
+    <string name="task_search">Поиск задачи</string>
 </resources>
