move attachment_actions.xml strings to resource strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="no_description">Нет описания</string>
     <string name="changes_history">История изменений</string>
     <string name="task_search">Поиск задачи</string>
+    <string name="delete">Удалить</string>
 </resources>
