move button titles of all dialog fragments to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="changes_history">История изменений</string>
     <string name="task_search">Поиск задачи</string>
     <string name="delete">Удалить</string>
+    <string name="create">Создать</string>
+    <string name="cancel">Отмена</string>
 </resources>
