--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="delete">Удалить</string>
     <string name="create">Создать</string>
     <string name="cancel">Отмена</string>
+    <string name="build_chart">Построить диаграмму</string>
+    <string name="Gantt">Диаграмма Гантта</string>
 </resources>
