--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
     <string name="task_search">Поиск задачи</string>
     <string name="delete">Удалить</string>
     <string name="create">Создать</string>
+    <string name="save">Сохранить</string>
     <string name="cancel">Отмена</string>
     <string name="build_chart">Построить диаграмму</string>
     <string name="Gantt">Диаграмма Гантта</string>
+    <string name="checklist_title">Чек-лист</string>
 </resources>
