--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="Gantt">Диаграмма Гантта</string>
     <string name="checklist_title">Чек-лист</string>
     <string name="add_checklist">Добавить чек-лист</string>
+    <string name="checkitem">Элемент чек-листа</string>
 </resources>
