--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="checklist_title">Чек-лист</string>
     <string name="add_checklist">Добавить чек-лист</string>
     <string name="checkitem">Элемент чек-листа</string>
+    <string name="start_or_continue_videocall">Начать/продолжить видеозвонок</string>
 </resources>
